--- a/app/assets/stylesheets/components/front/c-cover.scss
+++ b/app/assets/stylesheets/components/front/c-cover.scss
@@ -31,6 +31,11 @@
     }
   }
 
+  @media print {
+    height: auto;
+    background-image: none !important;
+  }
+
   &::after {
     display: block;
     position: absolute;
@@ -38,8 +43,16 @@
     left: 0;
     width: 100%;
     height: 33%;
-    content: '';
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.0), rgba(0,0,0, 0.3));
+    content: "";
+    background-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 0.3)
+    );
+
+    @media print {
+      background-image: none;
+    }
   }
 
   > .wrapper {
@@ -53,6 +66,10 @@
         // Position container at the center , 50px = header height
         transform: translateY(calc(-50% + 50px));
       }
+    }
+
+    @media print {
+      margin-bottom: 0;
     }
   }
 
@@ -71,7 +88,7 @@
 
     @if $theme == 2 {
       font-size: $font-size-x-big;
-      letter-spacing: .7px;
+      letter-spacing: 0.7px;
       text-transform: uppercase;
     }
 
@@ -83,6 +100,10 @@
       @media #{$mq-tablet} {
         font-size: $font-size-huge;
       }
+    }
+
+    @media print {
+      color: $color-4;
     }
   }
 
@@ -97,7 +118,7 @@
     padding-bottom: 15px;
 
     @if $theme == 2 {
-      letter-spacing: .7px;
+      letter-spacing: 0.7px;
       text-transform: uppercase;
     }
 
@@ -136,6 +157,5 @@
     > p {
       line-height: 0;
     }
-
   }
 }
