--- a/app/assets/stylesheets/layouts/management/l-widget-creation.scss
+++ b/app/assets/stylesheets/layouts/management/l-widget-creation.scss
@@ -50,7 +50,7 @@
         margin-top: 20px;
 
         > * {
-          flex-basis: 50%;
+          flex-basis: calc(50% - 5px);
           flex-grow: 0;
           height: 500px;
           overflow: hidden;
@@ -60,6 +60,16 @@
           display: flex;
           flex-direction: column;
           flex-wrap: nowrap;
+          margin-right: 10px;
+
+          .c-inputs-container {
+            margin-bottom: 20px;
+
+            .container {
+              padding-top: 15px;
+              padding-bottom: 15px;
+            }
+          }
         }
 
         .CodeMirror {
