--- a/app/views/site_page/search_results.html.erb
+++ b/app/views/site_page/search_results.html.erb
@@ -2,6 +2,7 @@
 
 <%= react_component('public/SearchResults', {
   site: @site_page.site,
+  image: @alternative_image,
   search: @search_string,
   page: @page_number,
   totalPages: @total_pages,
