Added default map settings to a map page when creating

--- a/app/views/admin/map_versions/_form.html.erb
+++ b/app/views/admin/map_versions/_form.html.erb
@@ -33,6 +33,11 @@
           <%= f.text_area :html, placeholder: 'Custom map html' %>
         </div>
 
+        <div class="container">
+          <%= f.label :default_settings %>
+          <%= f.text_area :default_settings, placeholder: 'Default settings' %>
+        </div>
+
       </div>
     </div>
   </div>
