--- a/app/views/site_page/analysis_dashboard.html.erb
+++ b/app/views/site_page/analysis_dashboard.html.erb
@@ -2,13 +2,11 @@
 <%= javascript_pack_tag 'application' %>
 
 <%= react_component('Cover', {
-  page: @site_page,
-  site: @site_page.site,
-  siteSettings: defined?(@site_page.site.site_settings) ? @site_page.site.site_settings : nil,
-  siteTitleOnly: @site_title_only,
-  siteTemplateName: @site_page.site.site_template.name,
-  image: @main_image,
-  pageSize: defined?(size) ? size : nil
+  title: @site_page.name,
+  subtitle: @site_page.site.name,
+  image: @page_cover,
+  size: 'small',
+  template: @site_page.site.site_template.name
 } ) %>
 
 <div class="l-analysis-dashboard">
