--- a/app/views/site_page/homepage.html.erb
+++ b/app/views/site_page/homepage.html.erb
@@ -1,12 +1,18 @@
 <%= javascript_pack_tag 'application' %>
 
+<%= react_component('Cover', {
+  title: @site_page.site.name,
+  image: @homepage_cover,
+  template: @site_page.site.site_template.name
+} ) %>
+
 <%= react_component('HomePage', {
   page: @site_page,
   site: @site_page.site,
   siteSettings: defined?(@site_page.site.site_settings) ? @site_page.site.site_settings : nil,
   siteTitleOnly: @site_title_only,
   siteTemplateName: @site_page.site.site_template.name,
-  image: @main_image,
+  coverImage: @homepage_cover,
   pageSize: defined?(size) ? size : nil
 } ) %>
 
