--- a/app/views/site_page/open_content_v2.html.erb
+++ b/app/views/site_page/open_content_v2.html.erb
@@ -1,5 +1,13 @@
 <%= javascript_pack_tag 'application' %>
 
+<%= react_component('Cover', {
+  title:  @site_page.name,
+  subtitle: @site_page.site.name,
+  image: @page_cover,
+  size: 'small',
+  template: @site_page.site.site_template.name
+} ) %>
+
 <%= react_component('StaticPage', {
   version: 2,
   page: @site_page,
@@ -7,7 +15,7 @@
   siteSettings: defined?(@site_page.site.site_settings) ? @site_page.site.site_settings : nil,
   siteTitleOnly: @site_title_only,
   siteTemplateName: @site_page.site.site_template.name,
-  image: @alternative_image,
+  coverImage: @page_cover,
   pageSize: defined?(size) ? size : nil,
   relatedPages: @site_page.related_pages
 } ) %>
