Reset the state of the map form when changing version (creation only)

--- a/app/views/management/page_steps/map.html.erb
+++ b/app/views/management/page_steps/map.html.erb
@@ -23,7 +23,7 @@
             <div class="container">
               <label for="version">Version</label>
               <div class="c-select -small">
-                <%= ff.select 'version', MapVersion.order(:position).pluck(:version) %>
+                <%= ff.select 'version', MapVersion.order(:position).pluck(:version), {}, class: 'js-version' %>
               </div>
             </div>
           </div>
