--- a/app/views/management/site_pages/map/_layer.html.erb
+++ b/app/views/management/site_pages/map/_layer.html.erb
@@ -7,7 +7,7 @@
       'intactForests': :check_box, 'aboveGroundBiomass': :check_box,
       'landCover': :check_box, 'mangroves': :check_box,
       'sadAlerts': :check_box, 'gladAlerts': :check_box,
-      'terraiAlerts': :check_box, 'formaAlerts': :check_box,
+      'terraIAlerts': :check_box, 'formaAlerts': :check_box,
   } %>
 
   <% fields.each do |field| %>
