Changed the search results page to tag searching

--- a/app/views/management/page_steps/tag_searching.erb
+++ b/app/views/management/page_steps/tag_searching.erb
@@ -2,8 +2,8 @@
     <div class="c-extended-header -high">
       <div class="wrapper">
         <div class="description">
-          <h1>Search Query</h1>
-          <p>Please write the words for the search results page.</p>
+          <h1>Tag Searching</h1>
+          <p>Please choose the tags you'd like to have on the page.</p>
         </div>
         <div></div>
       </div>
@@ -22,8 +22,8 @@
 
       <div class="wrapper">
         <div class="c-fieldset">
-          <%= f.text_field :content, placeholder: 'Search query', id: 'content' %>
-          <%= f.label 'Search query', for: 'content' %>
+          <%= f.text_field :content, placeholder: 'Tags', id: 'content' %>
+          <%= f.label 'Tags', for: 'content' %>
         </div>
       </div>
   </div>
