--- a/app/views/management/page_steps/type.html.erb
+++ b/app/views/management/page_steps/type.html.erb
@@ -60,10 +60,10 @@
         </div>
 
         <div class="card -footer-at-bottom">
-          <h3 class="title">Search Results</h3>
-          <p class="description">Add a search resuls page.</p>
+          <h3 class="title">Tag Searching</h3>
+          <p class="description">Add a listing of pages containing the chosen tags.</p>
           <div class="footer">
-            <%= button_to 'Create', management_site_page_step_path(@site.slug), method: :put, params: {id: :type, 'site_page[content_type]': ContentType::SEARCH_RESULTS}, class: 'c-button'  %>
+            <%= button_to 'Create', management_site_page_step_path(@site.slug), method: :put, params: {id: :type, 'site_page[content_type]': ContentType::TAG_SEARCHING}, class: 'c-button'  %>
           </div>
         </div>
 
