--- a/app/views/management/page_steps/title.html.erb
+++ b/app/views/management/page_steps/title.html.erb
@@ -27,7 +27,7 @@
             <%= f.label :description %>
             <%= f.text_area :description, placeholder: 'Add your description here' %>
           </div>
-        <% unless [ContentType::HOMEPAGE, ContentType::SEARCH_RESULTS].include?(@page.content_type) %>
+        <% unless [ContentType::HOMEPAGE, ContentType::TAG_SEARCHING].include?(@page.content_type) %>
           <div class="container">
             <%= f.label :uri %>
             <%= f.text_field :uri, placeholder: 'my-page', :readonly => @page.content_type == ContentType::STATIC_CONTENT %>
@@ -39,7 +39,7 @@
         <% end %>
       </div>
 
-      <% unless [ContentType::HOMEPAGE, ContentType::SEARCH_RESULTS].include?(@page.content_type) %>
+      <% unless [ContentType::HOMEPAGE, ContentType::TAG_SEARCHING].include?(@page.content_type) %>
         <div class="container">
           <div class="l-site-creation -settings">
             <div class="settings">
