fixed bug with summernote

--- a/app/assets/stylesheets/management/application.scss
+++ b/app/assets/stylesheets/management/application.scss
@@ -1,14 +1,15 @@
 @import
-'leaflet',
-'jquery-ui',
-'sir-trevor',
-'select2',
-'../../../../node_modules/widget-editor/dist/styles.min',
-'../../../../node_modules/vizz-wysiwyg/build/rw',
-'../helpers',
-'settings',
-'../base',
-'../layouts/shared/*',
-'../layouts/management/*',
-'../components/shared/**/*',
-'../components/management/**/*';
+  'leaflet',
+  'jquery-ui',
+  'sir-trevor',
+  'select2',
+  'bootstrap',
+  '../../../../node_modules/widget-editor/dist/styles.min',
+  '../../../../node_modules/vizz-wysiwyg/build/rw',
+  '../helpers',
+  'settings',
+  '../base',
+  '../layouts/shared/*',
+  '../layouts/management/*',
+  '../components/shared/**/*',
+  '../components/management/**/*';
