Added related content

--- a/app/views/front/_footer.html.erb
+++ b/app/views/front/_footer.html.erb
@@ -1,3 +1,4 @@
+<%= render 'front/related_pages' %>
 <% unless @site_page.site.site_settings.pre_footer(@site_page.site_id).value.empty? %>
     <div class="c-pre-footer">
       <div class="wrapper">
