--- a/app/views/layouts/management.html.erb
+++ b/app/views/layouts/management.html.erb
@@ -17,6 +17,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.24.2/addon/edit/closetag.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pica/2.0.8/pica.min.js" type="text/javascript"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jsoneditor/5.26.0/jsoneditor.js"></script>
+  <script src="https://unpkg.com/tippy.js@3.3.0/dist/tippy.all.min.js" defer></script>
   <%= javascript_include_tag 'management', 'data-turbolinks-track': 'reload' %>
   <%= favicon_link_tag %>
 </head>
