--- a/app/views/front/_menu.html.erb
+++ b/app/views/front/_menu.html.erb
@@ -28,6 +28,14 @@
               </li>
             <% end -%>
         <% end -%>
+        <li>
+          <form method="get" action="<%= search_results_path(id: @site_page.site_id) %>">
+            <div class="c-input-search">
+              <input type="input" placeholder="Search" name="search" />
+              <button type="submit">Search</button>
+            </div>
+          </form>
+        </li>
       </ul>
       <ul>
         <li class="notranslate js-language-selector-mobile"></li>
@@ -131,8 +139,18 @@
                 <% end -%>
               </li>
           <% end -%>
-          <li>
-            <a href="<%= search_results_path(id: @site_page.site_id) %>">Search</a>
+          <li class="dropdown-item search js-search">
+            <button type="button" class="search-button js-search-button" href="<%= search_results_path(id: @site_page.site_id) %>">Search</button>
+            <ul>
+              <li>
+                <form method="get" action="<%= search_results_path(id: @site_page.site_id) %>">
+                  <div class="c-input-search">
+                    <input type="input" placeholder="Search" name="search" />
+                    <button type="submit">Search</button>
+                  </div>
+                </form>
+              </li>
+            </ul>
           </li>
         </ul>
         <ul>
