Hide the search bar on the tag searching pages

--- a/app/views/site_page/tag_searching.erb
+++ b/app/views/site_page/tag_searching.erb
@@ -5,7 +5,8 @@
   search: @search_string,
   page: @page_number,
   totalPages: @total_pages,
-  results: @search_results
+  results: @search_results,
+  hideSearchBar: true
 }) %>
 
 <script type="text/javascript">
