Add the tags to the tag searching page

--- a/app/assets/stylesheets/components/front/c-search-results.scss
+++ b/app/assets/stylesheets/components/front/c-search-results.scss
@@ -107,6 +107,11 @@
         color: $color-4;
       }
 
+      .tags {
+        font-weight: $font-weight-bold;
+        color: $color-1;
+      }
+
       .thumbnail {
         height: 210px;
         background-color: $color-2;
