--- a/app/views/management/site_pages/map/_base.html.erb
+++ b/app/views/management/site_pages/map/_base.html.erb
@@ -14,7 +14,7 @@
         type: :text_field,
         description: "The subtitle for your mapbuilder application, the subtitle will be used in the map printout"
       },
-      'webMenuName': {
+      'webmapMenuName': {
         type: :text_field,
         description: "Heading in layer panel for the group of layers which are pulled from the webmap"
       },
