Separate the caption from the alternative text in the wysiwyg

--- a/app/assets/stylesheets/components/shared/c-vizz-wysiwyg.scss
+++ b/app/assets/stylesheets/components/shared/c-vizz-wysiwyg.scss
@@ -88,6 +88,20 @@
         }
       }
     }
+
+    &.-image {
+      .fa-wysiwyg-file__preview {
+        label {
+          display: block;
+          margin-bottom: 10px;
+          text-align: left;
+        }
+
+        textarea {
+          margin-top: 5px;
+        }
+      }
+    }
   }
 
   blockquote {
