--- a/app/views/site_page/open_content.html.erb
+++ b/app/views/site_page/open_content.html.erb
@@ -7,7 +7,8 @@
   siteTitleOnly: @site_title_only,
   siteTemplateName: @site_page.site.site_template.name,
   image: @alternative_image,
-  pageSize: defined?(size) ? size : nil
+  pageSize: defined?(size) ? size : nil,
+  relatedPages: @site_page.related_pages
 } ) %>
 
 <script type="text/javascript">
