--- a/app/views/admin/site_steps/style.html.erb
+++ b/app/views/admin/site_steps/style.html.erb
@@ -87,53 +87,81 @@
             <% when 'main_image' %>
               <%= settings_form.hidden_field :position, value: '5'%>
               <%= settings_form.hidden_field :name, value: 'main_image'%>
-              <div class="homepage-cover">
-                <h3>Homepage cover image</h3>
-                <%= settings_form.file_field :image, id: 'main', accept: 'image/*', 'data-type': 'background' %>
-                <%= settings_form.label :image, value: 'Change homepage cover image', for: 'main', tabindex: '0' %>
-                <% if !@main_image.nil? && @main_image.image_file_name %>
-                  <div class="preview -high js-preview" style="background-image: url('<%= @main_image.image.url %>');">
+              <div class="homepage-cover-container">
+                <div class="homepage-cover">
+                  <h3>Homepage cover images</h3>
+                  <p>Add several images if you want a carousel.</p>
+                  <!-- TODO: the next block should be duplicated (one per image) -->
+                  <div>
+                    <%= settings_form.file_field :image, id: 'main', accept: 'image/*', 'data-type': 'background' %>
+                    <%= settings_form.label :image, value: 'Change homepage cover image', for: 'main', tabindex: '0' %>
+                    <% if !@main_image.nil? && @main_image.image_file_name %>
+                      <div class="preview -high js-preview" style="background-image: url('<%= @main_image.image.url %>');">
+                      </div>
+                    <% else %>
+                      <div class="placeholder -high js-placeholder">
+                        <span>Select file</span>
+                      </div>
+                    <% end %>
+                    <div class="file-input-footer">
+                      <div class="restrictions js-restrictions">
+                        Recommended dimensions: 1280x500<br />
+                        Max. size: 1MB
+                      </div>
+                      <div class="cover-attribution">
+                        <%= settings_form.text_field :attribution_label, placeholder: 'Add an attribution label to the image' %>
+                        <%= settings_form.text_field :attribution_link, placeholder: 'Add an attribution link to the image' %>
+                      </div>
+                    </div>
                   </div>
-                <% else %>
-                  <div class="placeholder -high js-placeholder">
-                    <span>Select file</span>
+
+                  <!-- Always leave one extra block so the user can add a new image -->
+                  <div>
+                    <%= settings_form.file_field :image, id: 'main', accept: 'image/*', 'data-type': 'background' %>
+                    <%= settings_form.label :image, value: 'Change homepage cover image', for: 'main', tabindex: '0' %>
+                    <div class="placeholder -high js-placeholder">
+                      <span>Select file</span>
+                    </div>
+                    <div class="file-input-footer">
+                      <div class="restrictions js-restrictions">
+                        Recommended dimensions: 1280x500<br />
+                        Max. size: 1MB
+                      </div>
+                      <div class="cover-attribution">
+                        <%= settings_form.text_field :attribution_label, placeholder: 'Add an attribution label to the image' %>
+                        <%= settings_form.text_field :attribution_link, placeholder: 'Add an attribution link to the image' %>
+                      </div>
+                    </div>
                   </div>
-                <% end %>
-                <div class="file-input-footer">
-                  <div class="restrictions js-restrictions">
-                    Recommended dimensions: 1280x500<br />
-                    Max. size: 1MB
-                  </div>
-                  <div class="cover-attribution">
-                    <%= settings_form.text_field :attribution_label, placeholder: 'Add an attribution label to the image' %>
-                    <%= settings_form.text_field :attribution_link, placeholder: 'Add an attribution link to the image' %>
-                  </div>
+
                 </div>
               </div>
 
             <% when 'alternative_image' %>
               <%= settings_form.hidden_field :position, value: '6'%>
               <%= settings_form.hidden_field :name, value: 'alternative_image'%>
-              <div class="content-cover">
-                <h3>Content cover image</h3>
-                <%= settings_form.file_field :image, id: 'alternative', accept: 'image/*', 'data-type': 'background' %>
-                <%= settings_form.label :image, value: 'Change content cover image', for: 'alternative', tabindex: '0' %>
-                <% if !@alternative_image.nil? && @alternative_image.image_file_name %>
-                  <div class="preview -high js-preview" style="background-image: url('<%= @alternative_image.image.url %>');">
-                  </div>
-                <% else %>
-                  <div class="placeholder -high js-placeholder">
-                    <span>Select file</span>
-                  </div>
-                <% end %>
-                <div class="file-input-footer">
-                  <div class="restrictions js-restrictions">
-                    Recommended dimensions: 1280x250<br />
-                    Max. size: 1MB
-                  </div>
-                  <div class="cover-attribution">
-                    <%= settings_form.text_field :attribution_label, placeholder: 'Add an attribution label to the image' %>
-                    <%= settings_form.text_field :attribution_link, placeholder: 'Add an attribution link to the image' %>
+              <div class="content-cover-container">
+                <div class="content-cover">
+                  <h3>Content cover image</h3>
+                  <%= settings_form.file_field :image, id: 'alternative', accept: 'image/*', 'data-type': 'background' %>
+                  <%= settings_form.label :image, value: 'Change content cover image', for: 'alternative', tabindex: '0' %>
+                  <% if !@alternative_image.nil? && @alternative_image.image_file_name %>
+                    <div class="preview -high js-preview" style="background-image: url('<%= @alternative_image.image.url %>');">
+                    </div>
+                  <% else %>
+                    <div class="placeholder -high js-placeholder">
+                      <span>Select file</span>
+                    </div>
+                  <% end %>
+                  <div class="file-input-footer">
+                    <div class="restrictions js-restrictions">
+                      Recommended dimensions: 1280x250<br />
+                      Max. size: 1MB
+                    </div>
+                    <div class="cover-attribution">
+                      <%= settings_form.text_field :attribution_label, placeholder: 'Add an attribution label to the image' %>
+                      <%= settings_form.text_field :attribution_link, placeholder: 'Add an attribution link to the image' %>
+                    </div>
                   </div>
                 </div>
               </div>
